--- a/測試/00.CrewAI notebook 區塊庫.ipynb
+++ b/測試/00.CrewAI notebook 區塊庫.ipynb
@@ -161,6 +161,52 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# crewai_tools 工具的匯入方法\n",
+    "from crewai import Agent\n",
+    "from crewai_tools.tools import WebsiteSearchTool, SeperDevTool, FileReadTool\n",
+    "\n",
+    "web_search_tool = WebsiteSearchTool()\n",
+    "seper_dev_tool = SeperDevTool()\n",
+    "file_read_tool = FileReadTool(\n",
+    "\tfile_path='job_description_example.md',\n",
+    "\tdescription='A tool to read the job description example file.'\n",
+    ")\n",
+    "\n",
+    "class Agents():\n",
+    "\tdef research_agent(self):\n",
+    "\t\treturn Agent(\n",
+    "\t\t\trole='Research Analyst',\n",
+    "\t\t\tgoal='Analyze the company website and provided description to extract insights on culture, values, and specific needs.',\n",
+    "\t\t\ttools=[web_search_tool, seper_dev_tool],\n",
+    "\t\t\tbackstory='Expert in analyzing company cultures and identifying key values and needs from various sources, including websites and brief descriptions.',\n",
+    "\t\t\tverbose=True\n",
+    "\t\t)\n",
+    "\n",
+    "\tdef writer_agent(self):\n",
+    "\t\t\treturn Agent(\n",
+    "\t\t\t\trole='Job Description Writer',\n",
+    "\t\t\t\tgoal='Use insights from the Research Analyst to create a detailed, engaging, and enticing job posting.',\n",
+    "\t\t\t\ttools=[web_search_tool, seper_dev_tool, file_read_tool],\n",
+    "\t\t\t\tbackstory='Skilled in crafting compelling job descriptions that resonate with the company\\'s values and attract the right candidates.',\n",
+    "\t\t\t\tverbose=True\n",
+    "\t\t\t)\n",
+    "\n",
+    "\tdef review_agent(self):\n",
+    "\t\t\treturn Agent(\n",
+    "\t\t\t\trole='Review and Editing Specialist',\n",
+    "\t\t\t\tgoal='Review the job posting for clarity, engagement, grammatical accuracy, and alignment with company values and refine it to ensure perfection.',\n",
+    "\t\t\t\ttools=[web_search_tool, seper_dev_tool, file_read_tool],\n",
+    "\t\t\t\tbackstory='A meticulous editor with an eye for detail, ensuring every piece of content is clear, engaging, and grammatically perfect.',\n",
+    "\t\t\t\tverbose=True\n",
+    "\t\t\t)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
