--- a/測試/00.CrewAI notebook 區塊庫.ipynb
+++ b/測試/00.CrewAI notebook 區塊庫.ipynb
@@ -72,20 +72,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "d:\\TOMO.Project\\crewAI\\venv\\Lib\\site-packages\\langchain_openai\\chat_models\\base.py:299: UserWarning: WARNING! top_p is not default parameter.\n",
-      "                    top_p was transferred to model_kwargs.\n",
-      "                    Please confirm that top_p is what you intended.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 設定4個 LLM\n",
     "from langchain_google_genai import ChatGoogleGenerativeAI\n",
@@ -97,7 +86,8 @@
     "gpt4 = ChatOpenAI(model_name=\"gpt-4\", temperature=0.7),\n",
     "# Ollama 大模型，用 modelfile 建立的，可以在 modelfile 設定溫度，但切勿在系統提示詞要它使用中文回復，會造成函數調用不正常\n",
     "# 除此之外，ollama 的 openhermes 模型表現不錯`\n",
-    "ollama = Ollama(model=\"openhermes\")\n",
+    "# ollama 2024/03/12 最強大模型 nous-hermes2\n",
+    "ollama = Ollama(model=\"nous-hermes2\")\n",
     "# gemini 感覺相容性不好，常出現莫名的錯誤\n",
     "gemini = ChatGoogleGenerativeAI(model=\"gemini-pro\",\n",
     "                             verbose = True,\n",
@@ -108,7 +98,8 @@
     "                        openai_api_key=os.environ.get(\"OPENAI_API_KEY\"),\n",
     "                        temperature=0.1,                        \n",
     "                        model_name=os.environ.get(\"MODEL_NAME\", \"gpt-3.5-turbo\"),\n",
-    "                        top_p=0.3)"
+    "                        # top_p=0.3\n",
+    "                        )"
    ]
   },
   {
@@ -129,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,9 +153,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'SeperDevTool' from 'crewai_tools.tools' (d:\\TOMO.Project\\crewAI\\venv\\Lib\\site-packages\\crewai_tools\\tools\\__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[8], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# crewai_tools 工具的匯入方法\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mcrewai\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Agent\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mcrewai_tools\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtools\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m WebsiteSearchTool, SeperDevTool, FileReadTool\n\u001b[0;32m      5\u001b[0m web_search_tool \u001b[38;5;241m=\u001b[39m WebsiteSearchTool()\n\u001b[0;32m      6\u001b[0m seper_dev_tool \u001b[38;5;241m=\u001b[39m SeperDevTool()\n",
+      "\u001b[1;31mImportError\u001b[0m: cannot import name 'SeperDevTool' from 'crewai_tools.tools' (d:\\TOMO.Project\\crewAI\\venv\\Lib\\site-packages\\crewai_tools\\tools\\__init__.py)"
+     ]
+    }
+   ],
    "source": [
     "# crewai_tools 工具的匯入方法\n",
     "from crewai import Agent\n",
@@ -208,9 +211,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'web_search_tool' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[9], line 21\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Define your agents with roles and goals\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m# allow_delegation=True, 打開測試看看\u001b[39;00m\n\u001b[0;32m      3\u001b[0m researcher \u001b[38;5;241m=\u001b[39m Agent(\n\u001b[0;32m      4\u001b[0m   role\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSenior Research Analyst\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m      5\u001b[0m   goal\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mUncover cutting-edge developments in AI and data science\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m      6\u001b[0m   backstory\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\"\"\u001b[39m\u001b[38;5;124mYou work at a leading tech think tank.\u001b[39m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;124m  Your expertise lies in identifying emerging trends.\u001b[39m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;124m  You have a knack for dissecting complex data and presenting\u001b[39m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;124m  actionable insights.\u001b[39m\u001b[38;5;124m\"\"\"\u001b[39m,\n\u001b[0;32m     10\u001b[0m   verbose\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m,\n\u001b[0;32m     11\u001b[0m   allow_delegation\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m,\n\u001b[0;32m     12\u001b[0m   tools\u001b[38;5;241m=\u001b[39m[\n\u001b[0;32m     13\u001b[0m         \u001b[38;5;66;03m# search_tool, \u001b[39;00m\n\u001b[0;32m     14\u001b[0m         \u001b[38;5;66;03m# BrowserTools.scrape_and_summarize_website, \u001b[39;00m\n\u001b[0;32m     15\u001b[0m         \u001b[38;5;66;03m# CalculatorTools.calculate, \u001b[39;00m\n\u001b[0;32m     16\u001b[0m         \u001b[38;5;66;03m# FileTools.write_file,\u001b[39;00m\n\u001b[0;32m     17\u001b[0m         SearchTools\u001b[38;5;241m.\u001b[39msearch_internet, SearchTools\u001b[38;5;241m.\u001b[39msearch_news,\n\u001b[0;32m     18\u001b[0m         SECTools\u001b[38;5;241m.\u001b[39msearch_10q, SECTools\u001b[38;5;241m.\u001b[39msearch_10k,\n\u001b[0;32m     19\u001b[0m         \u001b[38;5;66;03m# FindPapersArxiv.search_arxiv,\u001b[39;00m\n\u001b[0;32m     20\u001b[0m         \u001b[38;5;66;03m# GetTopHackernewsStories.get_top_hackernews_stories,\u001b[39;00m\n\u001b[1;32m---> 21\u001b[0m         \u001b[43mweb_search_tool\u001b[49m, seper_dev_tool, file_read_tool\n\u001b[0;32m     22\u001b[0m       ],\n\u001b[0;32m     23\u001b[0m   \u001b[38;5;66;03m# You can pass an optional llm attribute specifying what mode you wanna use.\u001b[39;00m\n\u001b[0;32m     24\u001b[0m   \u001b[38;5;66;03m# It can be a local model through Ollama / LM Studio or a remote\u001b[39;00m\n\u001b[0;32m     25\u001b[0m   \u001b[38;5;66;03m# model like OpenAI, Mistral, Antrophic of others (https://python.langchain.com/docs/integrations/llms/)\u001b[39;00m\n\u001b[0;32m     26\u001b[0m   \u001b[38;5;66;03m#\u001b[39;00m\n\u001b[0;32m     27\u001b[0m   \u001b[38;5;66;03m# Examples:\u001b[39;00m\n\u001b[0;32m     28\u001b[0m   \u001b[38;5;66;03m# llm = ollama # was defined above in the file\u001b[39;00m\n\u001b[0;32m     29\u001b[0m   \u001b[38;5;66;03m# llm = ChatOpenAI(model_name=\"gpt-3.5\", temperature=0.7)\u001b[39;00m\n\u001b[0;32m     30\u001b[0m   \u001b[38;5;66;03m# llm = gemini  #using google gemini pro API\u001b[39;00m\n\u001b[0;32m     31\u001b[0m   \u001b[38;5;66;03m# 或在定義後，使用 researcher.llm = ollama 或 gemini 來更改模型\u001b[39;00m\n\u001b[0;32m     32\u001b[0m )\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'web_search_tool' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Define your agents with roles and goals\n",
     "# allow_delegation=True, 打開測試看看\n",
