--- a/測試/demo-new.ipynb
+++ b/測試/demo-new.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,9 +39,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\TOMO.Project\\crewAI\\venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "# 設定4個 LLM\n",
     "from langchain_google_genai import ChatGoogleGenerativeAI\n",
@@ -53,7 +62,8 @@
     "gpt4 = ChatOpenAI(model_name=\"gpt-4\", temperature=0.7),\n",
     "# Ollama 大模型，可以看要用哪一個\n",
     "# ollama = Ollama(model=\"openhermes_assistant\")  # 這是用 modelfile 建立的\n",
-    "ollama = Ollama(model=\"openhermes\")\n",
+    "# ollama 2024/03/12 最強大模型 nous-hermes2\n",
+    "ollama = Ollama(model=\"nous-hermes2\")\n",
     "\n",
     "gemini = ChatGoogleGenerativeAI(model=\"gemini-pro\",\n",
     "                             verbose = True,\n",
@@ -64,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,20 +150,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "上面建立 agent 時，可以不指定 llm，這裡才指定\n",
+    "# 上面建立 agent 時，可以不指定 llm，這裡才指定\n",
     "researcher.llm = ollama\n",
     "writer.llm = ollama"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValidationError",
+     "evalue": "1 validation error for Task\nexpected_output\n  Field required [type=missing, input_value=<unprintable dict object>, input_type=dict]\n    For further information visit https://errors.pydantic.dev/2.6/v/missing",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValidationError\u001b[0m                           Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[13], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Create tasks for your agents\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m task1 \u001b[38;5;241m=\u001b[39m \u001b[43mTask\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m      3\u001b[0m \u001b[43m  \u001b[49m\u001b[43mdescription\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\"\"\u001b[39;49m\u001b[38;5;124;43mConduct a comprehensive analysis of the latest advancements in AI in 2024.\u001b[39;49m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;124;43m  Identify key trends, breakthrough technologies, and potential industry impacts.\u001b[39;49m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;124;43m  Your final answer MUST be a full analysis report\u001b[39;49m\u001b[38;5;124;43m\"\"\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m      6\u001b[0m \u001b[43m  \u001b[49m\u001b[43magent\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mresearcher\u001b[49m\n\u001b[0;32m      7\u001b[0m \u001b[43m)\u001b[49m\n\u001b[0;32m      9\u001b[0m task2 \u001b[38;5;241m=\u001b[39m Task(\n\u001b[0;32m     10\u001b[0m   description\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\"\"\u001b[39m\u001b[38;5;124mUsing the insights provided, develop an engaging blog\u001b[39m\n\u001b[0;32m     11\u001b[0m \u001b[38;5;124m  post that highlights the most significant AI advancements.\u001b[39m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     15\u001b[0m   agent\u001b[38;5;241m=\u001b[39mwriter\n\u001b[0;32m     16\u001b[0m )\n",
+      "File \u001b[1;32md:\\TOMO.Project\\crewAI\\venv\\Lib\\site-packages\\pydantic\\main.py:171\u001b[0m, in \u001b[0;36mBaseModel.__init__\u001b[1;34m(self, **data)\u001b[0m\n\u001b[0;32m    169\u001b[0m \u001b[38;5;66;03m# `__tracebackhide__` tells pytest and some other tools to omit this function from tracebacks\u001b[39;00m\n\u001b[0;32m    170\u001b[0m __tracebackhide__ \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[1;32m--> 171\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m__pydantic_validator__\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvalidate_python\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mself_instance\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mValidationError\u001b[0m: 1 validation error for Task\nexpected_output\n  Field required [type=missing, input_value=<unprintable dict object>, input_type=dict]\n    For further information visit https://errors.pydantic.dev/2.6/v/missing"
+     ]
+    }
+   ],
    "source": [
     "# Create tasks for your agents\n",
     "task1 = Task(\n",
@@ -175,14 +198,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024-03-03 01:31:44,480 - 17192 - __init__.py-__init__:521 - WARNING: Overriding of current TracerProvider is not allowed\n"
+     "ename": "NameError",
+     "evalue": "name 'Crew' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Instantiate your crew with a sequential process\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m crew \u001b[38;5;241m=\u001b[39m \u001b[43mCrew\u001b[49m(\n\u001b[0;32m      3\u001b[0m   agents\u001b[38;5;241m=\u001b[39m[researcher, writer],\n\u001b[0;32m      4\u001b[0m   tasks\u001b[38;5;241m=\u001b[39m[task1, task2],\n\u001b[0;32m      5\u001b[0m   verbose\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2\u001b[39m, \u001b[38;5;66;03m# You can set it to 1 or 2 to different logging levels\u001b[39;00m\n\u001b[0;32m      6\u001b[0m )\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'Crew' is not defined"
      ]
     }
    ],
