--- a/測試/demo.ipynb
+++ b/測試/demo.ipynb
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,9 +113,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValidationError",
+     "evalue": "1 validation error for Task\nexpected_output\n  Field required [type=missing, input_value=<unprintable dict object>, input_type=dict]\n    For further information visit https://errors.pydantic.dev/2.6/v/missing",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValidationError\u001b[0m                           Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[6], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Create tasks for your agents\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m task1 \u001b[38;5;241m=\u001b[39m \u001b[43mTask\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m      3\u001b[0m \u001b[43m  \u001b[49m\u001b[43mdescription\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\"\"\u001b[39;49m\u001b[38;5;124;43mConduct a comprehensive analysis of the latest advancements in AI in 2024.\u001b[39;49m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;124;43m  Identify key trends, breakthrough technologies, and potential industry impacts.\u001b[39;49m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;124;43m  Your final answer MUST be a full analysis report\u001b[39;49m\u001b[38;5;124;43m\"\"\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m      6\u001b[0m \u001b[43m  \u001b[49m\u001b[43magent\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mresearcher\u001b[49m\n\u001b[0;32m      7\u001b[0m \u001b[43m)\u001b[49m\n\u001b[0;32m      9\u001b[0m task2 \u001b[38;5;241m=\u001b[39m Task(\n\u001b[0;32m     10\u001b[0m   description\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\"\"\u001b[39m\u001b[38;5;124mUsing the insights provided, develop an engaging blog\u001b[39m\n\u001b[0;32m     11\u001b[0m \u001b[38;5;124m  post that highlights the most significant AI advancements.\u001b[39m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     16\u001b[0m   agent\u001b[38;5;241m=\u001b[39mwriter\n\u001b[0;32m     17\u001b[0m )\n",
+      "File \u001b[1;32md:\\TOMO.Project\\crewAI\\venv\\Lib\\site-packages\\pydantic\\main.py:171\u001b[0m, in \u001b[0;36mBaseModel.__init__\u001b[1;34m(self, **data)\u001b[0m\n\u001b[0;32m    169\u001b[0m \u001b[38;5;66;03m# `__tracebackhide__` tells pytest and some other tools to omit this function from tracebacks\u001b[39;00m\n\u001b[0;32m    170\u001b[0m __tracebackhide__ \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[1;32m--> 171\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m__pydantic_validator__\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvalidate_python\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mself_instance\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mValidationError\u001b[0m: 1 validation error for Task\nexpected_output\n  Field required [type=missing, input_value=<unprintable dict object>, input_type=dict]\n    For further information visit https://errors.pydantic.dev/2.6/v/missing"
+     ]
+    }
+   ],
    "source": [
     "# Create tasks for your agents\n",
     "task1 = Task(\n",
