--- a/測試/00.CrewAI notebook 區塊庫.ipynb
+++ b/測試/00.CrewAI notebook 區塊庫.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,28 +153,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'SeperDevTool' from 'crewai_tools.tools' (d:\\TOMO.Project\\crewAI\\venv\\Lib\\site-packages\\crewai_tools\\tools\\__init__.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[8], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# crewai_tools 工具的匯入方法\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mcrewai\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Agent\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mcrewai_tools\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtools\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m WebsiteSearchTool, SeperDevTool, FileReadTool\n\u001b[0;32m      5\u001b[0m web_search_tool \u001b[38;5;241m=\u001b[39m WebsiteSearchTool()\n\u001b[0;32m      6\u001b[0m seper_dev_tool \u001b[38;5;241m=\u001b[39m SeperDevTool()\n",
-      "\u001b[1;31mImportError\u001b[0m: cannot import name 'SeperDevTool' from 'crewai_tools.tools' (d:\\TOMO.Project\\crewAI\\venv\\Lib\\site-packages\\crewai_tools\\tools\\__init__.py)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# crewai_tools 工具的匯入方法\n",
     "from crewai import Agent\n",
-    "from crewai_tools.tools import WebsiteSearchTool, SeperDevTool, FileReadTool\n",
     "\n",
+    "# 以下是 crewai_tools 的全部工具類別, 從 __init__.py 擷取出來, 共20個\n",
+    "from crewai_tools.tools import CodeDocsSearchTool, CSVSearchTool, DirectorySearchTool, DirectoryReadTool, DOCXSearchTool \n",
+    "from crewai_tools.tools import FileReadTool, GithubSearchTool, SerperDevTool, TXTSearchTool, JSONSearchTool\n",
+    "from crewai_tools.tools import MDXSearchTool, PDFSearchTool, RagTool, ScrapeElementFromWebsiteTool, ScrapeWebsiteTool\n",
+    "from crewai_tools.tools import SeleniumScrapingTool, WebsiteSearchTool, XMLSearchTool, YoutubeChannelSearchTool, YoutubeVideoSearchTool\n",
+    "\n",
+    "# 要用的在建立該物件\n",
     "web_search_tool = WebsiteSearchTool()\n",
-    "seper_dev_tool = SeperDevTool()\n",
+    "seper_dev_tool = SerperDevTool()\n",
     "file_read_tool = FileReadTool(\n",
     "\tfile_path='job_description_example.md',\n",
     "\tdescription='A tool to read the job description example file.'\n",
@@ -211,21 +205,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'web_search_tool' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[9], line 21\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Define your agents with roles and goals\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m# allow_delegation=True, 打開測試看看\u001b[39;00m\n\u001b[0;32m      3\u001b[0m researcher \u001b[38;5;241m=\u001b[39m Agent(\n\u001b[0;32m      4\u001b[0m   role\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSenior Research Analyst\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m      5\u001b[0m   goal\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mUncover cutting-edge developments in AI and data science\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m      6\u001b[0m   backstory\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\"\"\u001b[39m\u001b[38;5;124mYou work at a leading tech think tank.\u001b[39m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;124m  Your expertise lies in identifying emerging trends.\u001b[39m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;124m  You have a knack for dissecting complex data and presenting\u001b[39m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;124m  actionable insights.\u001b[39m\u001b[38;5;124m\"\"\"\u001b[39m,\n\u001b[0;32m     10\u001b[0m   verbose\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m,\n\u001b[0;32m     11\u001b[0m   allow_delegation\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m,\n\u001b[0;32m     12\u001b[0m   tools\u001b[38;5;241m=\u001b[39m[\n\u001b[0;32m     13\u001b[0m         \u001b[38;5;66;03m# search_tool, \u001b[39;00m\n\u001b[0;32m     14\u001b[0m         \u001b[38;5;66;03m# BrowserTools.scrape_and_summarize_website, \u001b[39;00m\n\u001b[0;32m     15\u001b[0m         \u001b[38;5;66;03m# CalculatorTools.calculate, \u001b[39;00m\n\u001b[0;32m     16\u001b[0m         \u001b[38;5;66;03m# FileTools.write_file,\u001b[39;00m\n\u001b[0;32m     17\u001b[0m         SearchTools\u001b[38;5;241m.\u001b[39msearch_internet, SearchTools\u001b[38;5;241m.\u001b[39msearch_news,\n\u001b[0;32m     18\u001b[0m         SECTools\u001b[38;5;241m.\u001b[39msearch_10q, SECTools\u001b[38;5;241m.\u001b[39msearch_10k,\n\u001b[0;32m     19\u001b[0m         \u001b[38;5;66;03m# FindPapersArxiv.search_arxiv,\u001b[39;00m\n\u001b[0;32m     20\u001b[0m         \u001b[38;5;66;03m# GetTopHackernewsStories.get_top_hackernews_stories,\u001b[39;00m\n\u001b[1;32m---> 21\u001b[0m         \u001b[43mweb_search_tool\u001b[49m, seper_dev_tool, file_read_tool\n\u001b[0;32m     22\u001b[0m       ],\n\u001b[0;32m     23\u001b[0m   \u001b[38;5;66;03m# You can pass an optional llm attribute specifying what mode you wanna use.\u001b[39;00m\n\u001b[0;32m     24\u001b[0m   \u001b[38;5;66;03m# It can be a local model through Ollama / LM Studio or a remote\u001b[39;00m\n\u001b[0;32m     25\u001b[0m   \u001b[38;5;66;03m# model like OpenAI, Mistral, Antrophic of others (https://python.langchain.com/docs/integrations/llms/)\u001b[39;00m\n\u001b[0;32m     26\u001b[0m   \u001b[38;5;66;03m#\u001b[39;00m\n\u001b[0;32m     27\u001b[0m   \u001b[38;5;66;03m# Examples:\u001b[39;00m\n\u001b[0;32m     28\u001b[0m   \u001b[38;5;66;03m# llm = ollama # was defined above in the file\u001b[39;00m\n\u001b[0;32m     29\u001b[0m   \u001b[38;5;66;03m# llm = ChatOpenAI(model_name=\"gpt-3.5\", temperature=0.7)\u001b[39;00m\n\u001b[0;32m     30\u001b[0m   \u001b[38;5;66;03m# llm = gemini  #using google gemini pro API\u001b[39;00m\n\u001b[0;32m     31\u001b[0m   \u001b[38;5;66;03m# 或在定義後，使用 researcher.llm = ollama 或 gemini 來更改模型\u001b[39;00m\n\u001b[0;32m     32\u001b[0m )\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'web_search_tool' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Define your agents with roles and goals\n",
     "# allow_delegation=True, 打開測試看看\n",
@@ -263,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,21 +274,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 上面可以先不指定用哪一個 llm，這裡再指定就可以\n",
     "# 但是如果分 main.py、agents.py、tasks.py 三個檔案，就必須先指定用哪一個 llm\n",
-    "researcher.llm = ollama\n",
+    "researcher.llm = gpt35\n",
     "writer.llm = ollama"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValidationError",
+     "evalue": "1 validation error for Task\nexpected_output\n  Field required [type=missing, input_value={'description': 'Conduct ...  actionable insights.)}, input_type=dict]\n    For further information visit https://errors.pydantic.dev/2.6/v/missing",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValidationError\u001b[0m                           Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[21], line 5\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Create tasks for your agents\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m# 跟 phidata 比較，phidata 有提供 cli 命令交互式的方法，透過交互式的方式，可以讓使用者在命令列輸入文字，並回傳答案。\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# 但 crewai 必須在程式碼中定義好要執行的任務 tasks，並執行任務。\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# 要 AI 解決任務，就必須透過程式碼內輸入 tasks 的任務內容，並執行程式，才能得到結果。\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m task1 \u001b[38;5;241m=\u001b[39m \u001b[43mTask\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m      6\u001b[0m \u001b[43m  \u001b[49m\u001b[43mdescription\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\"\"\u001b[39;49m\u001b[38;5;124;43mConduct a comprehensive analysis of the latest advancements in AI in 2024.\u001b[39;49m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;124;43m  Identify key trends, breakthrough technologies, and potential industry impacts.\u001b[39;49m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;124;43m  Your final answer MUST be a full analysis report\u001b[39;49m\u001b[38;5;124;43m\"\"\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m      9\u001b[0m \u001b[43m  \u001b[49m\u001b[43magent\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mresearcher\u001b[49m\n\u001b[0;32m     10\u001b[0m \u001b[43m)\u001b[49m\n\u001b[0;32m     11\u001b[0m task2 \u001b[38;5;241m=\u001b[39m Task(\n\u001b[0;32m     12\u001b[0m   description\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\"\"\u001b[39m\u001b[38;5;124mUsing the insights provided, develop an engaging blog\u001b[39m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;124m  post that highlights the most significant AI advancements.\u001b[39m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     17\u001b[0m   agent \u001b[38;5;241m=\u001b[39m writer\n\u001b[0;32m     18\u001b[0m )\n\u001b[0;32m     19\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m     20\u001b[0m \u001b[38;5;124;03mtask3 = Task(\u001b[39;00m\n\u001b[0;32m     21\u001b[0m \u001b[38;5;124;03m  description=\"express the final blog post provided in traditional chinese。 and write it to a file AI_2024.md\",\u001b[39;00m\n\u001b[0;32m     22\u001b[0m \u001b[38;5;124;03m  agent = writer\u001b[39;00m\n\u001b[0;32m     23\u001b[0m \u001b[38;5;124;03m)\u001b[39;00m\n\u001b[0;32m     24\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n",
+      "File \u001b[1;32md:\\TOMO.Project\\crewAI\\venv\\Lib\\site-packages\\crewai\\task.py:76\u001b[0m, in \u001b[0;36mTask.__init__\u001b[1;34m(__pydantic_self__, **data)\u001b[0m\n\u001b[0;32m     74\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(__pydantic_self__, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mdata):\n\u001b[0;32m     75\u001b[0m     config \u001b[38;5;241m=\u001b[39m data\u001b[38;5;241m.\u001b[39mpop(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mconfig\u001b[39m\u001b[38;5;124m\"\u001b[39m, {})\n\u001b[1;32m---> 76\u001b[0m     \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[38;5;21;43m__init__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mconfig\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mdata\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32md:\\TOMO.Project\\crewAI\\venv\\Lib\\site-packages\\pydantic\\main.py:171\u001b[0m, in \u001b[0;36mBaseModel.__init__\u001b[1;34m(self, **data)\u001b[0m\n\u001b[0;32m    169\u001b[0m \u001b[38;5;66;03m# `__tracebackhide__` tells pytest and some other tools to omit this function from tracebacks\u001b[39;00m\n\u001b[0;32m    170\u001b[0m __tracebackhide__ \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[1;32m--> 171\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m__pydantic_validator__\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvalidate_python\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mself_instance\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mValidationError\u001b[0m: 1 validation error for Task\nexpected_output\n  Field required [type=missing, input_value={'description': 'Conduct ...  actionable insights.)}, input_type=dict]\n    For further information visit https://errors.pydantic.dev/2.6/v/missing"
+     ]
+    }
+   ],
    "source": [
     "# Create tasks for your agents\n",
     "# 跟 phidata 比較，phidata 有提供 cli 命令交互式的方法，透過交互式的方式，可以讓使用者在命令列輸入文字，並回傳答案。\n",
@@ -316,7 +312,7 @@
     "  description=\"\"\"Conduct a comprehensive analysis of the latest advancements in AI in 2024.\n",
     "  Identify key trends, breakthrough technologies, and potential industry impacts.\n",
     "  Your final answer MUST be a full analysis report\"\"\",\n",
-    "  agent=researcher\n",
+    "  agent = researcher\n",
     ")\n",
     "task2 = Task(\n",
     "  description=\"\"\"Using the insights provided, develop an engaging blog\n",
@@ -324,12 +320,14 @@
     "  Your post should be informative yet accessible, catering to a tech-savvy audience.\n",
     "  Make it sound cool, avoid complex words so it doesn't sound like AI.\n",
     "  Your final answer MUST be the full blog post of at least 5 paragraphs.\"\"\",\n",
-    "  agent=writer\n",
+    "  agent = writer\n",
     ")\n",
+    "\"\"\"\n",
     "task3 = Task(\n",
-    "  description=\"\"\"express the final blog post provided in traditional chinese。 and write it to a file AI_2024.md\"\"\",\n",
-    "  agent=writer\n",
-    ")"
+    "  description=\"express the final blog post provided in traditional chinese。 and write it to a file AI_2024.md\",\n",
+    "  agent = writer\n",
+    ")\n",
+    "\"\"\""
    ]
   },
   {
